# indelible

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
bedrock_attest/: attest.py  config.py  types.py  verify.py
bedrock_attest/collectors/: embedding_profile.py  latency.py
bedrock_attest/providers/: __init__.py  anthropic.py  ollama.py  openai_compat.py
docs/: TOLERANCES.md
examples/: 01_quickstart.py  02_anthropic_quickstart.py  04_drift_simulation.py
examples/coding_agent/: bedrock.toml  prompts.json
indelible/: __init__.py  attest.py  cli.py  config.py  types.py  verify.py
indelible/collectors/: __init__.py  anchor_drift.py  embedding_profile.py  latency.py  refusal.py  tool_distribution.py  tool_schema_hash.py  vocab_entropy.py
indelible/providers/: __init__.py  anthropic.py  errors.py  ollama.py  openai_compat.py
tests/: test_attest_verify.py  test_cli.py  test_collectors.py  test_config.py  test_providers.py  test_types.py
